# compagnon-rust

./: Cargo.toml
.history/migrations/: 20231022173346_create_users_table_20231022193350.sql  20231022173346_create_users_table_20231022193357.sql  20231022173346_create_users_table_20231022193406.sql  20231022173346_create_users_table_20231022193746.sql
.history/src/: main_20231022191608.rs  main_20231022191731.rs  main_20231022191734.rs  main_20231022191735.rs  main_20231022191737.rs  main_20231022191739.rs  main_20231022191741.rs  main_20231022191742.rs  main_20231022191746.rs  main_20231022191748.rs  main_20231022191749.rs  main_20231022191750.rs  main_20231022191755.rs  main_20231022191756.rs  main_20231022191757.rs  main_20231022191759.rs  main_20231022191800.rs  main_20231022191804.rs  main_20231022191805.rs  main_20231022191806.rs  main_20231022191808.rs  main_20231022191811.rs  main_20231022191815.rs  main_20231022191819.rs  main_20231022191820.rs  main_20231022191823.rs  main_20231022191832.rs  main_20231022191833.rs  main_20231022191835.rs  main_20231022191836.rs  main_20231022191837.rs  main_20231022191838.rs  main_20231022191839.rs  main_20231022191848.rs  main_20231022191850.rs  main_20231022191851.rs  main_20231022191852.rs  main_20231022191946.rs  main_20231022191953.rs  main_20231022191954.rs  (+201 more)
.history/src/commands/: ping_20231022191037.rs  ping_20231022191303.rs  (+1 more)
.sqlx/: query-4c55512dac85c3dc9984798d041280cd57d5b91d9455416fdbeb9b83ef7aab10.json
migrations/: 0001_users.sql  20231022173346_create_users_table.sql
src/: main.rs
src/commands/: ping.rs
