[package]
name = "compagnon"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
shuttle-poise = "0.29.0"
shuttle-runtime = "0.29.0"
shuttle-secrets = "0.29.0"
tracing = "0.1.37"
tokio = "1.26.0"
rustrict = "0.7.11"
shuttle-shared-db = { version = "0.29.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
serde = "1.0.148"